Started work on the render manager

--- a/GameEngine/GameEngine.vcxproj
+++ b/GameEngine/GameEngine.vcxproj
@@ -164,6 +164,7 @@
     <ClCompile Include="EntitySound.cpp" />
     <ClCompile Include="FollowPlaneCamera.cpp" />
     <ClCompile Include="FollowPlayerCamera.cpp" />
+    <ClCompile Include="FrameBuffer.cpp" />
     <ClCompile Include="GameScene.cpp" />
     <ClCompile Include="GLFWInput.cpp" />
     <ClCompile Include="GLFWWindow.cpp" />
@@ -185,9 +186,16 @@
     <ClCompile Include="MenuItem.cpp" />
     <ClCompile Include="MenuLoader.cpp" />
     <ClCompile Include="MenuScene.cpp" />
-    <ClCompile Include="Mesh.cpp" />
+    <ClCompile Include="AnimatedModelMesh.cpp" />
     <ClCompile Include="ModelLoader.cpp" />
     <ClCompile Include="Node.cpp" />
+    <ClCompile Include="OpenGL330AnimatedModel.cpp" />
+    <ClCompile Include="OpenGL330DirectionalShadowFramebuffer.cpp" />
+    <ClCompile Include="OpenGL330Engine.cpp" />
+    <ClCompile Include="OpenGL330PointShadowFramebuffer.cpp" />
+    <ClCompile Include="OpenGL330Shader.cpp" />
+    <ClCompile Include="OpenGL330StaticModel.cpp" />
+    <ClCompile Include="OpenGL330Texture.cpp" />
     <ClCompile Include="PathFinding.cpp" />
     <ClCompile Include="PathFollowing.cpp" />
     <ClCompile Include="PhysicsEngine.cpp" />
@@ -195,6 +203,8 @@
     <ClCompile Include="PhysicsSystem.cpp" />
     <ClCompile Include="Projection.cpp" />
     <ClCompile Include="QuatAnimKey.cpp" />
+    <ClCompile Include="RenderEngine.cpp" />
+    <ClCompile Include="RenderManager.cpp" />
     <ClCompile Include="RenderSystem.cpp" />
     <ClCompile Include="ResourceManager.cpp" />
     <ClCompile Include="RiggedAnimationSystem.cpp" />
@@ -249,6 +259,7 @@
     <ClInclude Include="EntitySound.h" />
     <ClInclude Include="FollowPlaneCamera.h" />
     <ClInclude Include="FollowPlayerCamera.h" />
+    <ClInclude Include="FrameBuffer.h" />
     <ClInclude Include="GameScene.h" />
     <ClInclude Include="GLFWInput.h" />
     <ClInclude Include="GLFWWindow.h" />
@@ -268,9 +279,16 @@
     <ClInclude Include="MenuItem.h" />
     <ClInclude Include="MenuLoader.h" />
     <ClInclude Include="MenuScene.h" />
-    <ClInclude Include="Mesh.h" />
+    <ClInclude Include="AnimatedModelMesh.h" />
     <ClInclude Include="ModelLoader.h" />
     <ClInclude Include="Node.h" />
+    <ClInclude Include="OpenGL330AnimatedModel.h" />
+    <ClInclude Include="OpenGL330DirectionalShadowFramebuffer.h" />
+    <ClInclude Include="OpenGL330Engine.h" />
+    <ClInclude Include="OpenGL330PointShadowFramebuffer.h" />
+    <ClInclude Include="OpenGL330Shader.h" />
+    <ClInclude Include="OpenGL330StaticModel.h" />
+    <ClInclude Include="OpenGL330Texture.h" />
     <ClInclude Include="PathFinding.h" />
     <ClInclude Include="PathFollowing.h" />
     <ClInclude Include="PhysicsEngine.h" />
@@ -278,6 +296,8 @@
     <ClInclude Include="PhysicsSystem.h" />
     <ClInclude Include="Projection.h" />
     <ClInclude Include="QuatAnimKey.h" />
+    <ClInclude Include="RenderEngine.h" />
+    <ClInclude Include="RenderManager.h" />
     <ClInclude Include="RenderSystem.h" />
     <ClInclude Include="resource.h" />
     <ClInclude Include="ResourceManager.h" />
