--- a/GameEngine/GameEngine.vcxproj
+++ b/GameEngine/GameEngine.vcxproj
@@ -159,6 +159,7 @@
     <ClCompile Include="ComponentShadowShader.cpp" />
     <ClCompile Include="ComponentState.cpp" />
     <ClCompile Include="ComponentTexture.cpp" />
+    <ClCompile Include="ConfigLoader.cpp" />
     <ClCompile Include="Entity.cpp" />
     <ClCompile Include="EntityManager.cpp" />
     <ClCompile Include="EntitySound.cpp" />
@@ -257,6 +258,7 @@
     <ClInclude Include="ComponentShadowShader.h" />
     <ClInclude Include="ComponentState.h" />
     <ClInclude Include="ComponentTexture.h" />
+    <ClInclude Include="ConfigLoader.h" />
     <ClInclude Include="Entity.h" />
     <ClInclude Include="EntityManager.h" />
     <ClInclude Include="EntitySound.h" />
