--- a/Game-Test1/Game-Test1.vcxproj.filters
+++ b/Game-Test1/Game-Test1.vcxproj.filters
@@ -253,6 +253,27 @@
     <None Include="PlatformerLevelConfig.json">
       <Filter>Configs</Filter>
     </None>
+    <None Include="OptionsMenu.lua">
+      <Filter>Scripts</Filter>
+    </None>
+    <None Include="ControllerSetup.json">
+      <Filter>Menus</Filter>
+    </None>
+    <None Include="ScreenSizeSetup.json">
+      <Filter>Menus</Filter>
+    </None>
+    <None Include="FramerateSetup.json">
+      <Filter>Menus</Filter>
+    </None>
+    <None Include="ControllerSetupMenu.lua">
+      <Filter>Scripts</Filter>
+    </None>
+    <None Include="FramerateMenu.lua">
+      <Filter>Scripts</Filter>
+    </None>
+    <None Include="ScreenSizeMenu.lua">
+      <Filter>Scripts</Filter>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <Text Include="3DLevel.txt">
